# normies

./: .gitignore  AGENTS.md  Cargo.toml  README.md  benchmark.md  normies.py  pyproject.toml
.cargo/: config.toml
.claude/skills/normies-workflow/: SKILL.md
.port/: README.md
.port/skills/normies-workflow/references/: spec-guide.md
.port/src/: main.rs
benchmark/: README.md
benchmark/scripts/: plot_profiles.py  run_benchmark.py
examples/: spec-a2a.yaml  spec.yaml
scripts/: port_to_rust.sh
skills/normies-workflow/: SKILL.md
skills/normies-workflow/agents/: openai.yaml
skills/normies-workflow/references/: spec-guide.md
skills/normies-workflow/scripts/: make_spec.py
src/: cli.rs  commands.rs  gateway.rs  lib.rs  models.rs  runtime.rs
tests/: cli.rs  test_normies.py
