[package]
name = "normies"
version = "0.1.0"
edition = "2024"
description = "Git-centric multi-agent orchestrator with Docker-isolated execution."
license = "MIT"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.51", features = ["derive"] }
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"

[dev-dependencies]
assert_cmd = "2.1.1"
serde_json = "1.0.145"
tempfile = "3.23.0"

[alias]
qa = "clippy --all-targets --all-features -- -D warnings"
ci = "test --all-targets --all-features"
