[package]
name = "normies"
version = "0.1.0"
edition = "2024"
description = "Git-centric multi-agent orchestrator with Docker-isolated execution."
license = "MIT"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.51", features = ["derive"] }
rand = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.6"
tower = "0.5.2"
http-body-util = "0.1.3"
tokio-util = "0.7.17"
futures-util = "0.3.31"
hyper = { version = "1.7.0", features = ["http1", "client", "server"] }
hyper-util = { version = "0.1.17", features = ["tokio", "server", "http1", "client-legacy"] }
tower-service = "0.3.3"

[dev-dependencies]
assert_cmd = "2.1.1"
serde_json = "1.0.145"
tempfile = "3.23.0"
