[project]
name = "normies"
version = "0.1.0"
description = "Git-centric multi-agent orchestrator with Docker-isolated execution."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1,<9",
  "PyYAML>=6.0",
]

[project.scripts]
normies = "normies:cli"

[dependency-groups]
dev = [
  "pytest>=8.2,<9",
]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"
